syntax error corrected

--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@
             />
           </g>
           <defs>
-            <linearGgadient
+            <lineargradient
               id="paint0_linear_1_444"
               x1="396.928"
               y1="-77.634"
@@ -477,7 +477,7 @@
             >
               <stop stop-color="#9EE6F7" stop-opacity="0" />
               <stop offset="1" stop-color="#9EE6F7" stop-opacity="0.46" />
-            </linearGgadient>
+            </lineargradient>
             <lineargradient
               id="paint1_linear_1_444"
               x1="414.67"
