--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="main-page">
-      <div class="hero-section">
+      <div class="hero-frame">
         <div class="header-section">
           <div class="header-content">
             <div class="header-logo">
@@ -351,7 +351,7 @@
           </p>
         </div>
       </div>
-      <div class="faq">
+      <div class="faq-frame">
         <h1>FAQs</h1>
         <div class="faq-section">
           <div class="faq-item">
