Page style updated

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div class="main-page">
       <div class="hero-frame">
-        <div class="header-section">
+        <header>
           <div class="header-content">
             <div class="header-logo">
               <svg
@@ -38,20 +38,24 @@
           </div>
           <div class="header-content">
             <div class="header-links">
-              <a href="#" id="my-urls-link">My URLs</a>
-              <a href="#" id="features-link">Features</a>
-              <a href="#" id="pricing-link">Pricing</a>
-              <a href="#" id="analytics-link">Analytics</a>
-              <a href="#" id="faqs-link">FAQs</a>
+              <nav>
+                <ul>
+                  <li><a href="#" id="my-urls-link">My URLs</a></li>
+                  <li><a href="#" id="features-link">Features <span class="dropdown-arrow">&#9662;</span></a></li>
+                  <li><a href="#" id="pricing-link">Pricing</a></li>
+                  <li><a href="#" id="analytics-link">Analytics</a></li>
+                  <li><a href="#" id="faqs-link">FAQs</a></li>
+                </ul>
+              </nav>
             </div>
           </div>
           <div class="header-content">
             <div class="header-account">
-              <a href="#" id="login-link">Login</a>
+              <a href="#" id="login-link">Log in</a>
               <button id="signup-link">Try for free</button>
             </div>
           </div>
-        </div>
+        </header>
         <div class="hero-main">
           <div class="hero-content">
             <h1 id="hero-heading">
