--- a/index.html
+++ b/index.html
@@ -59,15 +59,15 @@
         <div class="hero-main">
           <div class="hero-content">
             <h1 id="hero-heading">
-              Optimize Your Online Experience with Our Advanced
+              Optimize Your Online Experience with Our <br>Advanced
               <span class="blue-highlight">URL Shortening</span> Solution
             </h1>
           </div>
           <div class="hero-content">
             <p id="hero-subheading">
               Personalize your shortened URLs to align with your brand identity.
-              Utilize custom slugs, branded links, and domain customization
-              options to reinforce your brand presence and enhance user
+              Utilize custom slugs, <br> branded links, and domain customization
+              options to reinforce your brand presence and  <br>enhance user
               engagement.
             </p>
           </div>
@@ -79,7 +79,7 @@
           </div>
           <div class="hero-content">
             <p class="hero-description">
-              Seamlessly transform your long URLs into concise and shareable
+              Seamlessly transform your long URLs into concise <br> and shareable
               links with just few clicks.
             </p>
           </div>
