more styles edit

--- a/index.html
+++ b/index.html
@@ -41,7 +41,11 @@
               <nav>
                 <ul>
                   <li><a href="#" id="my-urls-link">My URLs</a></li>
-                  <li><a href="#" id="features-link">Features <span class="dropdown-arrow">&#9662;</span></a></li>
+                  <li>
+                    <a href="#" id="features-link"
+                      >Features <span class="dropdown-arrow">&#9662;</span></a
+                    >
+                  </li>
                   <li><a href="#" id="pricing-link">Pricing</a></li>
                   <li><a href="#" id="analytics-link">Analytics</a></li>
                   <li><a href="#" id="faqs-link">FAQs</a></li>
@@ -59,16 +63,16 @@
         <div class="hero-main">
           <div class="hero-content">
             <h1 id="hero-heading">
-              Optimize Your Online Experience with Our <br>Advanced
+              Optimize Your Online Experience with Our <br />Advanced
               <span class="blue-highlight">URL Shortening</span> Solution
             </h1>
           </div>
           <div class="hero-content">
             <p id="hero-subheading">
               Personalize your shortened URLs to align with your brand identity.
-              Utilize custom slugs, <br> branded links, and domain customization
-              options to reinforce your brand presence and  <br>enhance user
-              engagement.
+              Utilize custom slugs, <br />
+              branded links, and domain customization options to reinforce your
+              brand presence and <br />enhance user engagement.
             </p>
           </div>
           <div class="hero-content">
@@ -77,161 +81,169 @@
               <a href="#" id="learn-more-link">Learn More</a>
             </div>
           </div>
-          <div class="hero-content">
-            <p class="hero-description">
-              Seamlessly transform your long URLs into concise <br> and shareable
-              links with just few clicks.
-            </p>
-          </div>
-          <div class="hero-content">
-            <div id="hero-svg-1">
-              <svg
-                width="440"
-                height="258"
-                viewBox="0 0 440 258"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <path
-                  d="M86.6771 41.1107C135.228 -63.1745 174.407 59.5845 198.623 107.021C233.043 174.448 318.301 234.6 115.971 255.011C-86.3584 275.422 25.9891 171.467 86.6771 41.1107Z"
-                  fill="#E2E9F0"
-                />
-                <path
-                  d="M106 77.3333H116C118.189 77.3333 120.356 77.7643 122.378 78.6019C124.4 79.4395 126.237 80.6672 127.785 82.2148C129.333 83.7624 130.56 85.5998 131.398 87.6219C132.236 89.644 132.667 91.8112 132.667 93.9999C132.667 96.1886 132.236 98.3559 131.398 100.378C130.56 102.4 129.333 104.237 127.785 105.785C126.237 107.333 124.4 108.56 122.378 109.398C120.356 110.235 118.189 110.667 116 110.667H106M86 110.667H76C73.8113 110.667 71.644 110.235 69.6219 109.398C67.5998 108.56 65.7625 107.333 64.2149 105.785C61.0893 102.659 59.3333 98.4202 59.3333 93.9999C59.3333 89.5796 61.0893 85.3404 64.2149 82.2148C67.3405 79.0892 71.5797 77.3333 76 77.3333H86"
-                  stroke="#141414"
-                  stroke-width="2"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                />
-                <path
-                  d="M82.6667 94H109.333"
-                  stroke="#141414"
-                  stroke-width="2"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                />
-                <path
-                  d="M178 77.3333H188C190.189 77.3333 192.356 77.7643 194.378 78.6019C196.4 79.4395 198.237 80.6672 199.785 82.2148C201.333 83.7624 202.56 85.5998 203.398 87.6219C204.236 89.644 204.667 91.8112 204.667 93.9999C204.667 96.1886 204.236 98.3559 203.398 100.378C202.56 102.4 201.333 104.237 199.785 105.785C198.237 107.333 196.4 108.56 194.378 109.398C192.356 110.235 190.189 110.667 188 110.667H178M158 110.667H148C145.811 110.667 143.644 110.235 141.622 109.398C139.6 108.56 137.763 107.333 136.215 105.785C133.089 102.659 131.333 98.4202 131.333 93.9999C131.333 89.5796 133.089 85.3404 136.215 82.2148C139.34 79.0892 143.58 77.3333 148 77.3333H158"
-                  stroke="#141414"
-                  stroke-width="2"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                />
-                <path
-                  d="M154.667 94H181.333"
-                  stroke="#141414"
-                  stroke-width="2"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                />
-                <path
-                  d="M250 77.3333H260C262.189 77.3333 264.356 77.7643 266.378 78.6019C268.4 79.4395 270.237 80.6672 271.785 82.2148C273.333 83.7624 274.56 85.5998 275.398 87.6219C276.236 89.644 276.667 91.8112 276.667 93.9999C276.667 96.1886 276.236 98.3559 275.398 100.378C274.56 102.4 273.333 104.237 271.785 105.785C270.237 107.333 268.4 108.56 266.378 109.398C264.356 110.235 262.189 110.667 260 110.667H250M230 110.667H220C217.811 110.667 215.644 110.235 213.622 109.398C211.6 108.56 209.763 107.333 208.215 105.785C205.089 102.659 203.333 98.4202 203.333 93.9999C203.333 89.5796 205.089 85.3404 208.215 82.2148C211.34 79.0892 215.58 77.3333 220 77.3333H230"
-                  stroke="#141414"
-                  stroke-width="2"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                />
-                <path
-                  d="M226.667 94H253.333"
-                  stroke="#141414"
-                  stroke-width="2"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                />
-                <path
-                  d="M300 93C299.448 93 299 93.4477 299 94C299 94.5523 299.448 95 300 95V93ZM340 94L330 88.2265V99.7735L340 94ZM300 95H331V93H300V95Z"
-                  fill="#005AE2"
-                />
-                <path
-                  d="M410 77.3333H420C422.189 77.3333 424.356 77.7643 426.378 78.6019C428.4 79.4395 430.237 80.6672 431.785 82.2148C433.333 83.7624 434.56 85.5998 435.398 87.6219C436.236 89.644 436.667 91.8112 436.667 93.9999C436.667 96.1886 436.236 98.3559 435.398 100.378C434.56 102.4 433.333 104.237 431.785 105.785C430.237 107.333 428.4 108.56 426.378 109.398C424.356 110.235 422.189 110.667 420 110.667H410M390 110.667H380C377.811 110.667 375.644 110.235 373.622 109.398C371.6 108.56 369.763 107.333 368.215 105.785C365.089 102.659 363.333 98.4202 363.333 93.9999C363.333 89.5796 365.089 85.3404 368.215 82.2148C371.34 79.0892 375.58 77.3333 380 77.3333H390"
-                  stroke="#141414"
-                  stroke-width="2"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                />
-                <path
-                  d="M386.667 94H413.333"
-                  stroke="#141414"
-                  stroke-width="2"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                />
-              </svg>
-            </div>
-          </div>
-          <div class="hero-content">
-            <div id="hero-svg-2">
-              <svg
-                width="1440"
-                height="93"
-                viewBox="0 0 1440 93"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <path
-                  d="M201.516 9.70664C217.021 3.29808 233.634 0 250.411 0H1186.9C1203.48 0 1219.89 3.21974 1235.24 9.48037L1440 93H0L201.516 9.70664Z"
-                  fill="#F8F7F7"
-                />
-                <g filter="url(#filter0_d_1_136)">
-                  <ellipse
-                    cx="734"
-                    cy="44.5"
-                    rx="478"
-                    ry="24.5"
-                    fill="url(#paint0_linear_1_136)"
-                    fill-opacity="0.7"
-                    shape-rendering="crispEdges"
+          <div class="hero-graphic-section">
+            <div class="hero-graphic-card">
+              <div class="hero-content">
+                <svg
+                  width="384"
+                  height="80"
+                  viewBox="0 0 384 80"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M50 23.3333L60 23.3333C62.1887 23.3333 64.356 23.7643 66.3781 24.6019C68.4002 25.4395 70.2375 26.6672 71.7851 28.2148C73.3328 29.7624 74.5604 31.5998 75.398 33.6219C76.2356 35.644 76.6667 37.8112 76.6667 39.9999C76.6667 42.1886 76.2356 44.3559 75.398 46.378C74.5604 48.4001 73.3328 50.2374 71.7851 51.785C70.2375 53.3327 68.4002 54.5603 66.3781 55.3979C64.356 56.2355 62.1887 56.6666 60 56.6666H50M30 56.6666H20C17.8113 56.6666 15.644 56.2355 13.6219 55.3979C11.5998 54.5603 9.76253 53.3327 8.21488 51.785C5.08928 48.6594 3.33333 44.4202 3.33333 39.9999C3.33333 35.5796 5.08928 31.3404 8.21488 28.2148C11.3405 25.0892 15.5797 23.3333 20 23.3333H30"
+                    stroke="#141414"
+                    stroke-width="2"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
                   />
-                </g>
-                <defs>
-                  <filter
-                    id="filter0_d_1_136"
-                    x="252"
-                    y="20"
-                    width="964"
-                    height="57"
-                    filterUnits="userSpaceOnUse"
-                    color-interpolation-filters="sRGB"
+                  <path
+                    d="M26.6667 40H53.3333"
+                    stroke="#141414"
+                    stroke-width="2"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  />
+                  <path
+                    d="M122 23.3333L132 23.3333C134.189 23.3333 136.356 23.7643 138.378 24.6019C140.4 25.4395 142.237 26.6672 143.785 28.2148C145.333 29.7624 146.56 31.5998 147.398 33.6219C148.236 35.644 148.667 37.8112 148.667 39.9999C148.667 42.1886 148.236 44.3559 147.398 46.378C146.56 48.4001 145.333 50.2374 143.785 51.785C142.237 53.3327 140.4 54.5603 138.378 55.3979C136.356 56.2355 134.189 56.6666 132 56.6666H122M102 56.6666H92C89.8113 56.6666 87.644 56.2355 85.6219 55.3979C83.5998 54.5603 81.7625 53.3327 80.2149 51.785C77.0893 48.6594 75.3333 44.4202 75.3333 39.9999C75.3333 35.5796 77.0893 31.3404 80.2149 28.2148C83.3405 25.0892 87.5797 23.3333 92 23.3333H102"
+                    stroke="#141414"
+                    stroke-width="2"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  />
+                  <path
+                    d="M98.6667 40H125.333"
+                    stroke="#141414"
+                    stroke-width="2"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  />
+                  <path
+                    d="M194 23.3333L204 23.3333C206.189 23.3333 208.356 23.7643 210.378 24.6019C212.4 25.4395 214.237 26.6672 215.785 28.2148C217.333 29.7624 218.56 31.5998 219.398 33.6219C220.236 35.644 220.667 37.8112 220.667 39.9999C220.667 42.1886 220.236 44.3559 219.398 46.378C218.56 48.4001 217.333 50.2374 215.785 51.785C214.237 53.3327 212.4 54.5603 210.378 55.3979C208.356 56.2355 206.189 56.6666 204 56.6666H194M174 56.6666H164C161.811 56.6666 159.644 56.2355 157.622 55.3979C155.6 54.5603 153.763 53.3327 152.215 51.785C149.089 48.6594 147.333 44.4202 147.333 39.9999C147.333 35.5796 149.089 31.3404 152.215 28.2148C155.34 25.0892 159.58 23.3333 164 23.3333H174"
+                    stroke="#141414"
+                    stroke-width="2"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  />
+                  <path
+                    d="M170.667 40H197.333"
+                    stroke="#141414"
+                    stroke-width="2"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  />
+                  <path
+                    d="M244 39C243.448 39 243 39.4477 243 40C243 40.5523 243.448 41 244 41V39ZM284 40L274 34.2265V45.7735L284 40ZM244 41H275V39H244V41Z"
+                    fill="#005AE2"
+                  />
+                  <path
+                    d="M354 23.3333L364 23.3333C366.189 23.3333 368.356 23.7643 370.378 24.6019C372.4 25.4395 374.237 26.6672 375.785 28.2148C377.333 29.7624 378.56 31.5998 379.398 33.6219C380.236 35.644 380.667 37.8112 380.667 39.9999C380.667 42.1886 380.236 44.3559 379.398 46.378C378.56 48.4001 377.333 50.2374 375.785 51.785C374.237 53.3327 372.4 54.5603 370.378 55.3979C368.356 56.2355 366.189 56.6666 364 56.6666H354M334 56.6666H324C321.811 56.6666 319.644 56.2355 317.622 55.3979C315.6 54.5603 313.763 53.3327 312.215 51.785C309.089 48.6594 307.333 44.4202 307.333 39.9999C307.333 35.5796 309.089 31.3404 312.215 28.2148C315.34 25.0892 319.58 23.3333 324 23.3333H334"
+                    stroke="#141414"
+                    stroke-width="2"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  />
+                  <path
+                    d="M330.667 40H357.333"
+                    stroke="#141414"
+                    stroke-width="2"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  />
+                </svg>
+                <p class="hero-description">
+                  Seamlessly transform your long URLs into concise <br />
+                  and shareable links with just few clicks.
+                </p>
+                <svg id="hero-svg-1" width="247" height="258" viewBox="0 0 247 258" fill="none" xmlns="http://www.w3.org/2000/svg">
+<path d="M86.6771 41.1107C135.228 -63.1745 174.407 59.5845 198.623 107.021C233.043 174.448 318.301 234.6 115.971 255.011C-86.3584 275.422 25.9891 171.467 86.6771 41.1107Z" fill="#E2E9F0"/>
+</svg>
+
+              </div>
+              <div class="hero-content">
+                <div id="hero-svg-2">
+                  <svg
+                    width="1440"
+                    height="93"
+                    viewBox="0 0 1440 93"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
                   >
-                    <feflood flood-opacity="0" result="BackgroundImageFix" />
-                    <fecolormatrix
-                      in="SourceAlpha"
-                      type="matrix"
-                      values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"
-                      result="hardAlpha"
+                    <path
+                      d="M201.516 9.70664C217.021 3.29808 233.634 0 250.411 0H1186.9C1203.48 0 1219.89 3.21974 1235.24 9.48037L1440 93H0L201.516 9.70664Z"
+                      fill="#F8F7F7"
                     />
-                    <feoffset dy="4" />
-                    <fecomposite in2="hardAlpha" operator="out" />
-                    <fecolormatrix
-                      type="matrix"
-                      values="0 0 0 0 0.0705882 0 0 0 0 0.141176 0 0 0 0 0.34902 0 0 0 0.35 0"
-                    />
-                    <feblend
-                      mode="normal"
-                      in2="BackgroundImageFix"
-                      result="effect1_dropShadow_1_136"
-                    />
-                    <feblend
-                      mode="normal"
-                      in="SourceGraphic"
-                      in2="effect1_dropShadow_1_136"
-                      result="shape"
-                    />
-                  </filter>
-                  <lineargradient
-                    id="paint0_linear_1_136"
-                    x1="734"
-                    y1="20"
-                    x2="734"
-                    y2="69"
-                    gradientUnits="userSpaceOnUse"
-                  >
-                    <stop offset="0.106755" stop-color="#E2E9F0" />
-                    <stop offset="0.440102" stop-color="#DCE4EB" />
-                    <stop offset="1" stop-color="#E2E9F0" stop-opacity="0" />
-                  </lineargradient>
-                </defs>
-              </svg>
+                    <g filter="url(#filter0_d_1_136)">
+                      <ellipse
+                        cx="734"
+                        cy="44.5"
+                        rx="478"
+                        ry="24.5"
+                        fill="url(#paint0_linear_1_136)"
+                        fill-opacity="0.7"
+                        shape-rendering="crispEdges"
+                      />
+                    </g>
+                    <defs>
+                      <filter
+                        id="filter0_d_1_136"
+                        x="252"
+                        y="20"
+                        width="964"
+                        height="57"
+                        filterUnits="userSpaceOnUse"
+                        color-interpolation-filters="sRGB"
+                      >
+                        <feflood
+                          flood-opacity="0"
+                          result="BackgroundImageFix"
+                        />
+                        <fecolormatrix
+                          in="SourceAlpha"
+                          type="matrix"
+                          values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"
+                          result="hardAlpha"
+                        />
+                        <feoffset dy="4" />
+                        <fegaussianblur stdDeviation="2" />
+                        <fecomposite in2="hardAlpha" operator="out" />
+                        <fecolormatrix
+                          type="matrix"
+                          values="0 0 0 0 0.0705882 0 0 0 0 0.141176 0 0 0 0 0.34902 0 0 0 0.35 0"
+                        />
+                        <feblend
+                          mode="normal"
+                          in2="BackgroundImageFix"
+                          result="effect1_dropShadow_1_136"
+                        />
+                        <feblend
+                          mode="normal"
+                          in="SourceGraphic"
+                          in2="effect1_dropShadow_1_136"
+                          result="shape"
+                        />
+                      </filter>
+                      <lineargradient
+                        id="paint0_linear_1_136"
+                        x1="734"
+                        y1="20"
+                        x2="734"
+                        y2="69"
+                        gradientUnits="userSpaceOnUse"
+                      >
+                        <stop offset="0.106755" stop-color="#E2E9F0" />
+                        <stop offset="0.440102" stop-color="#DCE4EB" />
+                        <stop
+                          offset="1"
+                          stop-color="#E2E9F0"
+                          stop-opacity="0"
+                        />
+                      </lineargradient>
+                    </defs>
+                  </svg>
+                </div>
+              </div>
             </div>
           </div>
         </div>
