--- a/index.html
+++ b/index.html
@@ -66,6 +66,19 @@
               Optimize Your Online Experience with Our <br />Advanced
               <span class="blue-highlight">URL Shortening</span> Solution
             </h1>
+            <svg
+              id="brush-mark"
+              width="174"
+              height="21"
+              viewBox="0 0 174 21"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M162.517 0.905029C75.1007 1.58333 17.7488 11.4833 0 16.3486L9.28502 15.694L2.32125 17.9693L10.2135 17.6848L6.03526 19.3913L12.0705 20.8133C52.0748 16.4528 149.09 6.6406 173.63 5.2387L155.524 4.88668C165.556 3.5543 166.666 3.60686 166.666 3.60686C166.666 3.60686 162.517 2.61145 162.517 0.905029Z"
+                fill="#005AE2"
+              />
+            </svg>
           </div>
           <div class="hero-content">
             <p id="hero-subheading">
@@ -156,93 +169,28 @@
                   Seamlessly transform your long URLs into concise <br />
                   and shareable links with just few clicks.
                 </p>
-                <svg id="hero-svg-1" width="247" height="258" viewBox="0 0 247 258" fill="none" xmlns="http://www.w3.org/2000/svg">
-<path d="M86.6771 41.1107C135.228 -63.1745 174.407 59.5845 198.623 107.021C233.043 174.448 318.301 234.6 115.971 255.011C-86.3584 275.422 25.9891 171.467 86.6771 41.1107Z" fill="#E2E9F0"/>
-</svg>
-
+                <svg
+                  id="hero-svg-1"
+                  width="247"
+                  height="258"
+                  viewBox="0 0 247 258"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M86.6771 41.1107C135.228 -63.1745 174.407 59.5845 198.623 107.021C233.043 174.448 318.301 234.6 115.971 255.011C-86.3584 275.422 25.9891 171.467 86.6771 41.1107Z"
+                    fill="#E2E9F0"
+                  />
+                </svg>
               </div>
-              <div class="hero-content">
-                <div id="hero-svg-2">
-                  <svg
-                    width="1440"
-                    height="93"
-                    viewBox="0 0 1440 93"
-                    fill="none"
-                    xmlns="http://www.w3.org/2000/svg"
-                  >
-                    <path
-                      d="M201.516 9.70664C217.021 3.29808 233.634 0 250.411 0H1186.9C1203.48 0 1219.89 3.21974 1235.24 9.48037L1440 93H0L201.516 9.70664Z"
-                      fill="#F8F7F7"
-                    />
-                    <g filter="url(#filter0_d_1_136)">
-                      <ellipse
-                        cx="734"
-                        cy="44.5"
-                        rx="478"
-                        ry="24.5"
-                        fill="url(#paint0_linear_1_136)"
-                        fill-opacity="0.7"
-                        shape-rendering="crispEdges"
-                      />
-                    </g>
-                    <defs>
-                      <filter
-                        id="filter0_d_1_136"
-                        x="252"
-                        y="20"
-                        width="964"
-                        height="57"
-                        filterUnits="userSpaceOnUse"
-                        color-interpolation-filters="sRGB"
-                      >
-                        <feflood
-                          flood-opacity="0"
-                          result="BackgroundImageFix"
-                        />
-                        <fecolormatrix
-                          in="SourceAlpha"
-                          type="matrix"
-                          values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"
-                          result="hardAlpha"
-                        />
-                        <feoffset dy="4" />
-                        <fegaussianblur stdDeviation="2" />
-                        <fecomposite in2="hardAlpha" operator="out" />
-                        <fecolormatrix
-                          type="matrix"
-                          values="0 0 0 0 0.0705882 0 0 0 0 0.141176 0 0 0 0 0.34902 0 0 0 0.35 0"
-                        />
-                        <feblend
-                          mode="normal"
-                          in2="BackgroundImageFix"
-                          result="effect1_dropShadow_1_136"
-                        />
-                        <feblend
-                          mode="normal"
-                          in="SourceGraphic"
-                          in2="effect1_dropShadow_1_136"
-                          result="shape"
-                        />
-                      </filter>
-                      <lineargradient
-                        id="paint0_linear_1_136"
-                        x1="734"
-                        y1="20"
-                        x2="734"
-                        y2="69"
-                        gradientUnits="userSpaceOnUse"
-                      >
-                        <stop offset="0.106755" stop-color="#E2E9F0" />
-                        <stop offset="0.440102" stop-color="#DCE4EB" />
-                        <stop
-                          offset="1"
-                          stop-color="#E2E9F0"
-                          stop-opacity="0"
-                        />
-                      </lineargradient>
-                    </defs>
-                  </svg>
-                </div>
+            </div>
+            <div class="hero-content">
+              <div id="hero-svg-2">
+                <img
+                  src="images/svg 2.png"
+                  alt="ellipse"
+                  class="ellipse-image"
+                />
               </div>
             </div>
           </div>
