about-frame updated

--- a/index.html
+++ b/index.html
@@ -197,27 +197,33 @@
         </div>
       </div>
       <div class="about-frame">
-        <div class="about-frame-head-card">
-          <h1>
-            One Stop. <br />Four
-            <span class="blue-highlight">Possibilities</span>.
-          </h1>
-          <p class="statistics">
-            <span class="bold-text">3M</span><br />Active users
-          </p>
-          <p class="statistics">
-            <span class="bold-text">60M</span><br />Links & QR codes created
-          </p>
-          <p class="statistics">
-            <span class="bold-text">1B</span><br />Clicked & scanned connections
-          </p>
-          <p class="statistics">
-            <span class="bold-text">300K</span><br />App integrations
-          </p>
-        </div>
-        <div class="about-frame-body-card">
+        <section class="about-frame-header">
+          <div class="one-stop">
+            <h1>One Stop.</h1>
+            <h1>Four <span class="blue-highlight">Possibilities</span>.</h1>
+          </div>
+          <div class="statistics">
+            <div class="statistics-item">
+              <p class="statistics-figure">3M</p>
+              <p class="statistics-text">Active users</p>
+            </div>
+            <div class="statistics-item">
+              <p class="statistics-figure">60M</p>
+              <p class="statistics-text">Links & QR codes created</p>
+            </div>
+            <div class="statistics-item">
+              <p class="statistics-figure">1B</p>
+              <p class="statistics-text">Clicked & scanned connections</p>
+            </div>
+            <div class="statistics-item">
+              <p class="statistics-figure">300K</p>
+              <p class="statistics-text">App integrations</p>
+            </div>
+          </div>
+        </section>
+        <section class="about-frame-body">
           <div class="why-section">
-            <div class="about-frame-body-card-text">
+            <div class="why-section-item">
               <h2>Why choose <span class="blue-highlight">Scissor</span></h2>
               <p class="regular-paragraph">
                 Scissors is the hub of everything that has to do with your link
@@ -228,35 +234,192 @@
               </p>
             </div>
           </div>
-          <div class="about-frame-body-card-text">
-            <h2>URL Shortening</h2>
-            <p class="regular-paragraph">
-              Scissor allows you to shorten URLs of your business, events.
-              Shorten your URL at scale, URL redirects.
-            </p>
+          <div class="about-frame-grid">
+            <div class="about-frame-item">
+              <div class="about-frame-item-icon">
+                <svg
+                  width="57"
+                  height="56"
+                  viewBox="0 0 57 56"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <g clip-path="url(#clip0_1_202)">
+                    <path
+                      d="M31.1 23H34.1C34.7566 23 35.4068 23.1293 36.0134 23.3806C36.6201 23.6319 37.1712 24.0002 37.6355 24.4645C38.0998 24.9288 38.4681 25.48 38.7194 26.0866C38.9707 26.6932 39.1 27.3434 39.1 28C39.1 28.6566 38.9707 29.3068 38.7194 29.9134C38.4681 30.52 38.0998 31.0712 37.6355 31.5355C37.1712 31.9998 36.6201 32.3681 36.0134 32.6194C35.4068 32.8707 34.7566 33 34.1 33H31.1M25.1 33H22.1C21.4434 33 20.7932 32.8707 20.1866 32.6194C19.58 32.3681 19.0288 31.9998 18.5645 31.5355C17.6268 30.5979 17.1 29.3261 17.1 28C17.1 26.6739 17.6268 25.4021 18.5645 24.4645C19.5022 23.5268 20.7739 23 22.1 23H25.1"
+                      stroke="#141414"
+                      stroke-width="2"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                    />
+                    <path
+                      d="M24.1 28H32.1"
+                      stroke="#005AE2"
+                      stroke-width="2"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                    />
+                  </g>
+                  <circle
+                    cx="28.1"
+                    cy="28"
+                    r="28"
+                    fill="#3284FF"
+                    fill-opacity="0.13"
+                  />
+                  <defs>
+                    <clippath id="clip0_1_202">
+                      <rect
+                        width="24"
+                        height="24"
+                        fill="white"
+                        transform="translate(16.1 16)"
+                      />
+                    </clippath>
+                  </defs>
+                </svg>
+              </div>
+              <h3>URL Shortening</h3>
+              <p class="regular-paragraph">
+                Scissor allows you to shorten URLs of your business, events.
+                Shorten your URL at scale, URL redirects.
+              </p>
+            </div>
+            <div class="about-frame-item">
+              <div class="about-frame-item-icon">
+                <svg
+                  width="57"
+                  height="56"
+                  viewBox="0 0 57 56"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M27.1 20H20.1C19.5696 20 19.0609 20.2107 18.6858 20.5858C18.3107 20.9609 18.1 21.4696 18.1 22V36C18.1 36.5304 18.3107 37.0391 18.6858 37.4142C19.0609 37.7893 19.5696 38 20.1 38H34.1C34.6304 38 35.1391 37.7893 35.5142 37.4142C35.8893 37.0391 36.1 36.5304 36.1 36V29"
+                    stroke="black"
+                    stroke-width="2"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  />
+                  <path
+                    d="M34.6 18.5C34.9978 18.1022 35.5374 17.8787 36.1 17.8787C36.6626 17.8787 37.2022 18.1022 37.6 18.5C37.9978 18.8978 38.2213 19.4374 38.2213 20C38.2213 20.5626 37.9978 21.1022 37.6 21.5L28.1 31L24.1 32L25.1 28L34.6 18.5Z"
+                    stroke="#005AE2"
+                    stroke-width="2"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  />
+                  <circle
+                    cx="28.1"
+                    cy="28"
+                    r="28"
+                    fill="#3284FF"
+                    fill-opacity="0.13"
+                  />
+                </svg>
+              </div>
+              <h3>Custom URLs</h3>
+              <p class="regular-paragraph">
+                With Scissor, you can create custom URLs, with the length you
+                want! A solution for socials and businesses.
+              </p>
+            </div>
+            <div class="about-frame-item">
+              <div class="about-frame-item-icon">
+                <svg
+                  width="57"
+                  height="56"
+                  viewBox="0 0 57 56"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M25.8859 19.0676H18.8859V26.0676H25.8859V19.0676Z"
+                    stroke="black"
+                    stroke-width="2"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  />
+                  <path
+                    d="M36.8859 19.0676H29.8859V26.0676H36.8859V19.0676Z"
+                    stroke="#005AE2"
+                    stroke-width="2"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  />
+                  <path
+                    d="M36.8859 30.0676H29.8859V37.0676H36.8859V30.0676Z"
+                    stroke="black"
+                    stroke-width="2"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  />
+                  <path
+                    d="M25.8859 30.0676H18.8859V37.0676H25.8859V30.0676Z"
+                    stroke="#005AE2"
+                    stroke-width="2"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  />
+                  <circle
+                    cx="28.1"
+                    cy="28"
+                    r="28"
+                    fill="#3284FF"
+                    fill-opacity="0.13"
+                  />
+                </svg>
+              </div>
+              <h3>QR Codes</h3>
+              <p class="regular-paragraph">
+                Generate QR codes to your business, events. Bring your audience
+                and customers to your doorstep with this scan and go solution.
+              </p>
+            </div>
+            <div class="about-frame-item">
+              <div class="about-frame-item-icon">
+                <svg
+                  width="57"
+                  height="56"
+                  viewBox="0 0 57 56"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <g clip-path="url(#clip0_1_235)">
+                    <path
+                      d="M37.1 28H33.1L30.1 37L24.1 19L21.1 28H17.1"
+                      stroke="#0065FE"
+                      stroke-width="2"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                    />
+                  </g>
+                  <circle
+                    cx="28.1"
+                    cy="28"
+                    r="28"
+                    fill="#3284FF"
+                    fill-opacity="0.13"
+                  />
+                  <defs>
+                    <clippath id="clip0_1_235">
+                      <rect
+                        width="24"
+                        height="24"
+                        fill="white"
+                        transform="translate(16.1 16)"
+                      />
+                    </clippath>
+                  </defs>
+                </svg>
+              </div>
+              <h3>Data Analytics</h3>
+              <p class="regular-paragraph">
+                Receive data on the usage of either your shortened URL, custom
+                URLs or generated QR codes. Embedded to monitor progress.
+              </p>
+            </div>
           </div>
-          <div class="about-frame-body-card-text">
-            <h2>Custom URLs</h2>
-            <p class="regular-paragraph">
-              With Scissor, you can create custom URLs, with the length you
-              want! A solution for socials and businesses.
-            </p>
-          </div>
-          <div class="about-frame-body-card-text">
-            <h2>QR Codes</h2>
-            <p class="regular-paragraph">
-              Generate QR codes to your business, events. Bring your audience
-              and customers to your doorstep with this scan and go solution.
-            </p>
-          </div>
-          <div class="about-frame-body-card-text">
-            <h2>Data Analytics</h2>
-            <p class="regular-paragraph">
-              Receive data on the usage of either your shortened URL, custom
-              URLs or generated QR codes. Embedded to monitor progress.
-            </p>
-          </div>
-        </div>
+        </section>
       </div>
       <div class="subscription-plans-frame">
         <div class="subscription-plan-header-section">
