about frame style complete

--- a/index.html
+++ b/index.html
@@ -209,11 +209,14 @@
             </div>
             <div class="statistics-item">
               <p class="statistics-figure">60M</p>
-              <p class="statistics-text">Links & QR codes created</p>
+              <p class="statistics-text">
+                Links & QR <br />
+                codes created
+              </p>
             </div>
             <div class="statistics-item">
               <p class="statistics-figure">1B</p>
-              <p class="statistics-text">Clicked & scanned connections</p>
+              <p class="statistics-text">Clicked & scanned <br />connections</p>
             </div>
             <div class="statistics-item">
               <p class="statistics-figure">300K</p>
@@ -223,16 +226,42 @@
         </section>
         <section class="about-frame-body">
           <div class="why-section">
-            <div class="why-section-item">
-              <h2>Why choose <span class="blue-highlight">Scissor</span></h2>
-              <p class="regular-paragraph">
-                Scissors is the hub of everything that has to do with your link
-                management. We shorten your URLs, allow you creating custom ones
-                for your personal, business, event usage. Our swift QR code
-                creation, management and usage tracking with advance analytics
-                for all of these is second to none.
-              </p>
-            </div>
+            <h2>
+              <svg
+                width="6"
+                height="48"
+                viewBox="0 0 6 48"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M3 0V48"
+                  stroke="url(#paint0_linear_1_196)"
+                  stroke-width="5"
+                />
+                <defs>
+                  <lineargradient
+                    id="paint0_linear_1_196"
+                    x1="3.05"
+                    y1="0"
+                    x2="3.05"
+                    y2="48"
+                    gradientUnits="userSpaceOnUse"
+                  >
+                    <stop stop-color="#112232" />
+                    <stop offset="1" stop-color="#4D6B88" stop-opacity="0" />
+                  </lineargradient>
+                </defs>
+              </svg>
+              Why choose <span class="blue-highlight">Scissor</span>
+            </h2>
+            <p class="regular-text">
+              Scissors is the hub of everything that has to do with your link
+              management. We shorten your URLs, allow you creating custom ones
+              for your personal, business, event usage. Our swift QR code
+              creation, management and usage tracking with advance analytics for
+              all of these is second to none.
+            </p>
           </div>
           <div class="about-frame-grid">
             <div class="about-frame-item">
@@ -280,7 +309,7 @@
                 </svg>
               </div>
               <h3>URL Shortening</h3>
-              <p class="regular-paragraph">
+              <p class="regular-text">
                 Scissor allows you to shorten URLs of your business, events.
                 Shorten your URL at scale, URL redirects.
               </p>
@@ -318,7 +347,7 @@
                 </svg>
               </div>
               <h3>Custom URLs</h3>
-              <p class="regular-paragraph">
+              <p class="regular-text">
                 With Scissor, you can create custom URLs, with the length you
                 want! A solution for socials and businesses.
               </p>
@@ -370,7 +399,7 @@
                 </svg>
               </div>
               <h3>QR Codes</h3>
-              <p class="regular-paragraph">
+              <p class="regular-text">
                 Generate QR codes to your business, events. Bring your audience
                 and customers to your doorstep with this scan and go solution.
               </p>
@@ -413,7 +442,7 @@
                 </svg>
               </div>
               <h3>Data Analytics</h3>
-              <p class="regular-paragraph">
+              <p class="regular-text">
                 Receive data on the usage of either your shortened URL, custom
                 URLs or generated QR codes. Embedded to monitor progress.
               </p>
@@ -426,7 +455,7 @@
           <h2>
             A <span class="blue-highlight">price perfect</span> for your needs.
           </h2>
-          <p class="regular-paragraph">
+          <p class="regular-text">
             From catering for your personal, business, event, socials needs, you
             can be rest assured we have you in mind in our pricing.
           </p>
